[package]
name = "dense"
version = "0.1.0"
authors = ["Ryan DV <rdevilla@uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["dns", "macros", "io-util", "rt-threaded", "tcp", "udp"] }
